<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.loc8r.seattle.activities.LoginActivity"
android:background="@color/primaryColor">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/linearLayout">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/secondaryColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="Password"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/secondaryColor"
        android:textSize="20sp" />


    <Button
        android:id="@+id/bt_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Log in"
        android:background="@color/secondaryColor"
        android:layout_marginTop="15dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/sign_up_text"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Login"
    android:textColor="@color/white"
    android:textSize="30dp"
    android:textStyle="bold"
    android:layout_above="@+id/linearLayout"
    android:layout_centerHorizontal="true" />

</RelativeLayout>
